production/orchestration-backend/orchestration-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-orchestration-backend
  labels:
    app: dissco-orchestration-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-orchestration-backend
  template:
    metadata:
      labels:
        app: dissco-orchestration-backend
        language: java
    spec:
      automountServiceAccountToken: true
      serviceAccountName: dissco-orchestration-backend-sa
      containers:
        - name: dissco-orchestration-backend
          image: public.ecr.aws/dissco/dissco-core-orchestration-backend:sha-024aece   # Apr-21-2026
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "1000m"
              ephemeral-storage: "1Gi"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 2
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: aws-secrets
              mountPath: "/mnt/secrets-store/aws-secrets"
              readOnly: true
      volumes:
        - name: aws-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aws-secrets"
